examples/test/testpolicy3854.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3854
  namespace: namespace460
spec:
  podSelector:
    matchLabels:
      key2: value26
      key46: value26
      key34: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value19
          key43: value8
          key14: value7
      podSelector:
        matchLabels:
          key38: value31
